@@ -1,17 +1,24 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.module.tulip" name="Tulip Library" version="2.9.10" provider-name="Twilight0">
+<addon id="script.module.tulip" name="Tulip Library" version="3.0.0~alpha1" provider-name="Twilight0">
     <requires>
         <import addon="xbmc.addon" version="16.1.000"/>
         <import addon="script.module.kodi-six" version="0.0.2"/>
+        <import addon="script.module.certifi" />
     </requires>
     <extension point="xbmc.python.module" library="lib" />
     <extension point="xbmc.addon.metadata">
         <summary lang="en">Tulip library with helper functions for Kodi and its forks</summary>
         <description lang="en">Tulip library combines the best elements from Lambda's "lamlib" and tknorris's shared modules. Also includes various enhancements, newer and improved functions and Python 3 compatibility, though the latter is largely untested. Can also be as standalone utils</description>
         <platform>all</platform>
+        <reuselanguageinvoker>false</reuselanguageinvoker>
         <license>GPL-3.0-only</license>
         <source>https://github.com/Twilight0/script.module.tulip</source>
-        <news>[B]2.9.X[/B]
+        <news>[B]3.0.X[/B]
+- Utilize certifi for net module
+- Add ability to save locally unencrypted m3u8 ts video content
+- Update user agent strings
+
+[B]2.9.X[/B]
 - Net module taken from ResolveURL and adapted
   > Deprecate client.request function
 - Add futures for compatibility
